# remult-cli

./: .env.example  .eslintrc  .gitignore  CHANGELOG.md  Earthfile  LICENSE  dagger.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  readme.md  test.tsx  tsconfig.json
.changeset/: angry-ties-grow.md  plenty-eyes-allow.md  spicy-avocados-march.md  swift-turtles-impress.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
dagger/: .gitignore  pyproject.toml
dagger/src/main/: __init__.py
integration/: integration.spec.ts
scripts/db/: bookstore-schecma.sql
source/: DbTable.ts  app.tsx  cli.ts  cli.tsx  getEntityTypescriptPostgres.ts
source/introspection/: entity-schema.ts  postgres.ts
source/postgres/: commands.ts
source/utils/: case.ts
source/utils/__test__/: case.test.ts
src/: DbTable.ts  cli.ts  getEntity.test.ts  getEntity.ts  getEntityTypescriptPostgres.test.ts  getEntityTypescriptPostgres.ts  report.ts
src/db/: DbMySQL.ts  DbPostgres.ts  DbPostgress.ts  DbTable.ts  processColumnType.ts  types.ts
src/postgres/: commands.ts  processColumnType.ts
src/utils/: case.test.ts  case.ts  format.test.ts  format.ts  genId.ts
src/utils/__test__/: case.test.ts
